// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInputField should display right value on grouped options 1`] = `
<DocumentFragment>
  .cache-832x4l-SelectInputContainer {
  width: 100%;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wfyv8s-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nqyb46-Stack-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='small'] {
  height: 32px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='medium'] {
  height: 40px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='large'] {
  height: 48px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='success'] {
  border: 1px solid #22674e;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='danger'] {
  border: 1px solid #b3144d;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1nqyb46-Stack-StyledInputWrapper:hover,
.cache-1nqyb46-Stack-StyledInputWrapper:focus {
  border-color: #792dd4;
  outline: none;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-dropdownvisible='true'] {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-wzr69d-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-1xcfd85-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xcfd85-StyledIcon-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.cache-2bm03f-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 0px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  width: 100%;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-2bm03f-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-2bm03f-StyledPopup-StyledPopup[data-visible-in-dom='false'] {
  display: none;
}

.cache-1guc91g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tbrdar-Stack-DropdownContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 256px;
  overflow-y: scroll;
  padding: 0;
  padding-bottom: 4px;
  padding-top: 4px;
}

.cache-tbrdar-Stack-DropdownContainer[data-grouped='true'] {
  padding-top: 0;
}

.cache-113ljh8-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-psepay-DropdownGroupWrapper {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.cache-erc09e-DropdownGroup {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background-color: #f9f9fa;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  padding-right: 16px;
  padding-left: 16px;
  height: 32px;
  text-align: left;
  margin-bottom: 2px;
}

.cache-erc09e-DropdownGroup:focus {
  background-color: #f9f9fa;
  outline: none;
}

.cache-erc09e-DropdownGroup[data-selectgroup='true'] {
  padding-left: 16px;
  border-left: 4px solid #f9f9fa;
}

.cache-erc09e-DropdownGroup[data-selectgroup='true']:focus {
  background-color: #e9eaeb;
}

.cache-zis5in-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

.cache-1ej1xix-DropdownItem {
  text-align: left;
  border: none;
  background-color: #ffffff;
  padding: 12px 16px 12px 16px;
  margin-left: 4px;
  margin-right: 4px;
  color: #3f4250;
  border-radius: 4px;
}

.cache-1ej1xix-DropdownItem:hover,
.cache-1ej1xix-DropdownItem:focus {
  background-color: #f1eefc;
  color: #641cb3;
  cursor: pointer;
  outline: none;
}

.cache-1ej1xix-DropdownItem[data-selected='true'] {
  background-color: #f1eefc;
}

.cache-1ej1xix-DropdownItem[disabled] {
  background-color: #f3f3f4;
  color: #b5b7bd;
}

.cache-1ej1xix-DropdownItem[disabled]:hover,
.cache-1ej1xix-DropdownItem [disabled]:focus {
  background-color: #f3f3f4;
  color: #b5b7bd;
  cursor: not-allowed;
  outline: none;
}

.cache-qrj8hh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1ug7ot4-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

.cache-1p3f4r5-StyledText {
  color: #727683;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

.cache-tb6hp-StyledText-HelperText {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form
    novalidate=""
  >
    <div
      aria-label="test"
      class="cache-832x4l-SelectInputContainer ebdnz3x1"
    >
      <div
        aria-controls=":rc:"
        aria-describedby=":rc:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        data-container-full-width="true"
        tabindex="0"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            class="cache-wfyv8s-Stack ehpbis70"
          />
          <div
            aria-controls="select-dropdown"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-labelledby="select bar"
            class="cache-1nqyb46-Stack-StyledInputWrapper ejy0aca2"
            data-disabled="false"
            data-dropdownvisible="true"
            data-readonly="false"
            data-size="large"
            data-state="neutral"
            data-testid="select-bar"
            tabindex="0"
          >
            <p
              class="cache-1e8qouo-StyledText e13y3mga0"
            >
              Mercury
            </p>
            <div
              class="cache-wzr69d-Stack-StateStack ejy0aca3"
            >
              <button
                aria-label="clear value"
                class="cache-1xcp86l-StyledGhostButton e112qvla0"
                data-testid="clear-all"
                type="button"
              >
                <svg
                  class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
              <svg
                class="cache-1xcfd85-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="eeucz6c8 cache-2bm03f-StyledPopup-StyledPopup e4h1g861"
          data-has-arrow="false"
          id=":rc:"
          role="dialog"
          style="opacity: 1;"
        >
          <div
            class="cache-1guc91g-Stack ehpbis70"
          >
            <div
              class="cache-tbrdar-Stack-DropdownContainer eeucz6c7"
              data-grouped="true"
              id="select-dropdown"
              role="listbox"
            >
              <div
                class="cache-113ljh8-Stack ehpbis70"
              >
                <div
                  class="cache-psepay-DropdownGroupWrapper eeucz6c5"
                >
                  <button
                    class="cache-erc09e-DropdownGroup eeucz6c6"
                    data-selectgroup="false"
                    data-testid="group-0"
                    role="group"
                    tabindex="-1"
                  >
                    <span
                      class="cache-zis5in-StyledText e13y3mga0"
                    >
                      TERRESTRIAL PLANETS
                    </span>
                  </button>
                </div>
                <div
                  class="cache-113ljh8-Stack ehpbis70"
                  id="items"
                >
                  <button
                    aria-label="mercury"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="true"
                    data-testid="option-mercury"
                    id="option-0"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-mercury"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Mercury
                        </span>
                      </div>
                    </div>
                  </button>
                  <button
                    aria-label="venus"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-venus"
                    id="option-1"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-venus"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Venus
                        </span>
                      </div>
                    </div>
                  </button>
                  <button
                    aria-label="earth"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-earth"
                    id="option-2"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-earth"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Earth
                        </span>
                      </div>
                      <span
                        class="cache-1p3f4r5-StyledText e13y3mga0"
                      >
                        Our home planet
                      </span>
                    </div>
                  </button>
                  <button
                    aria-label="mars"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-mars"
                    disabled=""
                    id="option-3"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-mars"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Mars
                        </span>
                      </div>
                    </div>
                  </button>
                  <button
                    aria-label="pluto"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-pluto"
                    id="option-4"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-pluto"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Pluto
                        </span>
                      </div>
                      <span
                        class="cache-1p3f4r5-StyledText e13y3mga0"
                      >
                        Pluto does not fit the usual classification of either terrestrial or Jovian planets, but is rocky
                      </span>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="cache-113ljh8-Stack ehpbis70"
              >
                <div
                  class="cache-psepay-DropdownGroupWrapper eeucz6c5"
                >
                  <button
                    class="cache-erc09e-DropdownGroup eeucz6c6"
                    data-selectgroup="false"
                    data-testid="group-1"
                    role="group"
                    tabindex="-1"
                  >
                    <span
                      class="cache-zis5in-StyledText e13y3mga0"
                    >
                      JOVIAN PLANETS
                    </span>
                  </button>
                </div>
                <div
                  class="cache-113ljh8-Stack ehpbis70"
                  id="items"
                >
                  <button
                    aria-label="jupiter"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-jupiter"
                    id="option-0"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-jupiter"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Jupiter
                        </span>
                      </div>
                      <span
                        class="cache-1p3f4r5-StyledText e13y3mga0"
                      >
                        Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                      </span>
                    </div>
                  </button>
                  <button
                    aria-label="saturn"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-saturn"
                    id="option-1"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-saturn"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Saturn
                        </span>
                      </div>
                    </div>
                  </button>
                  <button
                    aria-label="uranus"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-uranus"
                    id="option-2"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-uranus"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Uranus
                        </span>
                      </div>
                    </div>
                  </button>
                  <button
                    aria-label="neptune"
                    class="cache-1ej1xix-DropdownItem eeucz6c4"
                    data-selected="false"
                    data-testid="option-neptune"
                    id="option-3"
                    role="option"
                  >
                    <div
                      class="cache-ymc80m-Stack ehpbis70"
                      data-testid="option-stack-neptune"
                    >
                      <div
                        class="cache-qrj8hh-Stack ehpbis70"
                      >
                        <span
                          class="cache-1ug7ot4-StyledText e13y3mga0"
                        >
                          Neptune
                        </span>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="ebdnz3x0 cache-tb6hp-StyledText-HelperText e13y3mga0"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectInputField should render correctly 1`] = `
<DocumentFragment>
  .cache-832x4l-SelectInputContainer {
  width: 100%;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wfyv8s-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nqyb46-Stack-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='small'] {
  height: 32px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='medium'] {
  height: 40px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='large'] {
  height: 48px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='success'] {
  border: 1px solid #22674e;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='danger'] {
  border: 1px solid #b3144d;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1nqyb46-Stack-StyledInputWrapper:hover,
.cache-1nqyb46-Stack-StyledInputWrapper:focus {
  border-color: #792dd4;
  outline: none;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-dropdownvisible='true'] {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-2i7hx1-StyledText-StyledPlaceholder {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #727683;
  text-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-2i7hx1-StyledText-StyledPlaceholder[data-disabled='true'] {
  color: #b5b7bd;
}

.cache-wzr69d-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xcfd85-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xcfd85-StyledIcon-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.cache-tb6hp-StyledText-HelperText {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form
    novalidate=""
  >
    <div
      aria-label="test"
      class="cache-832x4l-SelectInputContainer ebdnz3x1"
    >
      <div
        aria-controls=":r0:"
        aria-describedby=":r0:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        data-container-full-width="true"
        tabindex="0"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            class="cache-wfyv8s-Stack ehpbis70"
          />
          <div
            aria-controls="select-dropdown"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="select bar"
            class="cache-1nqyb46-Stack-StyledInputWrapper ejy0aca2"
            data-disabled="false"
            data-dropdownvisible="false"
            data-readonly="false"
            data-size="large"
            data-state="neutral"
            data-testid="select-bar"
            tabindex="0"
          >
            <p
              class="ejy0aca0 cache-2i7hx1-StyledText-StyledPlaceholder e13y3mga0"
            >
              Select item
            </p>
            <div
              class="cache-wzr69d-Stack-StateStack ejy0aca3"
            >
              <svg
                class="cache-1xcfd85-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="ebdnz3x0 cache-tb6hp-StyledText-HelperText e13y3mga0"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-832x4l-SelectInputContainer {
  width: 100%;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wfyv8s-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nqyb46-Stack-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='small'] {
  height: 32px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='medium'] {
  height: 40px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='large'] {
  height: 48px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='success'] {
  border: 1px solid #22674e;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='danger'] {
  border: 1px solid #b3144d;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1nqyb46-Stack-StyledInputWrapper:hover,
.cache-1nqyb46-Stack-StyledInputWrapper:focus {
  border-color: #792dd4;
  outline: none;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-dropdownvisible='true'] {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-2i7hx1-StyledText-StyledPlaceholder {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #727683;
  text-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-2i7hx1-StyledText-StyledPlaceholder[data-disabled='true'] {
  color: #b5b7bd;
}

.cache-wzr69d-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-l7q3qa-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-l7q3qa-StyledIcon-sizeStyles .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

.cache-tb6hp-StyledText-HelperText {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form
    novalidate=""
  >
    <div
      aria-label="test"
      class="cache-832x4l-SelectInputContainer ebdnz3x1"
    >
      <div
        aria-controls=":r3:"
        aria-describedby=":r3:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        data-container-full-width="true"
        tabindex="0"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            class="cache-wfyv8s-Stack ehpbis70"
          />
          <div
            aria-controls="select-dropdown"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="select bar"
            class="cache-1nqyb46-Stack-StyledInputWrapper ejy0aca2"
            data-disabled="true"
            data-dropdownvisible="false"
            data-readonly="false"
            data-size="large"
            data-state="neutral"
            data-testid="select-bar"
            tabindex="0"
          >
            <p
              class="ejy0aca0 cache-2i7hx1-StyledText-StyledPlaceholder e13y3mga0"
            >
              Select item
            </p>
            <div
              class="cache-wzr69d-Stack-StateStack ejy0aca3"
            >
              <svg
                class="cache-l7q3qa-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="ebdnz3x0 cache-tb6hp-StyledText-HelperText e13y3mga0"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectInputField should render correctly grouped 1`] = `
<DocumentFragment>
  .cache-832x4l-SelectInputContainer {
  width: 100%;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wfyv8s-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nqyb46-Stack-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='small'] {
  height: 32px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='medium'] {
  height: 40px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='large'] {
  height: 48px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='success'] {
  border: 1px solid #22674e;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='danger'] {
  border: 1px solid #b3144d;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1nqyb46-Stack-StyledInputWrapper:hover,
.cache-1nqyb46-Stack-StyledInputWrapper:focus {
  border-color: #792dd4;
  outline: none;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-dropdownvisible='true'] {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-2i7hx1-StyledText-StyledPlaceholder {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #727683;
  text-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-2i7hx1-StyledText-StyledPlaceholder[data-disabled='true'] {
  color: #b5b7bd;
}

.cache-wzr69d-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xcfd85-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xcfd85-StyledIcon-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.cache-tb6hp-StyledText-HelperText {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form
    novalidate=""
  >
    <div
      aria-label="test"
      class="cache-832x4l-SelectInputContainer ebdnz3x1"
    >
      <div
        aria-controls=":r9:"
        aria-describedby=":r9:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        data-container-full-width="true"
        tabindex="0"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            class="cache-wfyv8s-Stack ehpbis70"
          />
          <div
            aria-controls="select-dropdown"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="select bar"
            class="cache-1nqyb46-Stack-StyledInputWrapper ejy0aca2"
            data-disabled="false"
            data-dropdownvisible="false"
            data-readonly="false"
            data-size="large"
            data-state="neutral"
            data-testid="select-bar"
            tabindex="0"
          >
            <p
              class="ejy0aca0 cache-2i7hx1-StyledText-StyledPlaceholder e13y3mga0"
            >
              Select item
            </p>
            <div
              class="cache-wzr69d-Stack-StateStack ejy0aca3"
            >
              <svg
                class="cache-1xcfd85-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="ebdnz3x0 cache-tb6hp-StyledText-HelperText e13y3mga0"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectInputField should render correctly multiselect 1`] = `
<DocumentFragment>
  .cache-832x4l-SelectInputContainer {
  width: 100%;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wfyv8s-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nqyb46-Stack-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='small'] {
  height: 32px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='medium'] {
  height: 40px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='large'] {
  height: 48px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='success'] {
  border: 1px solid #22674e;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='danger'] {
  border: 1px solid #b3144d;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1nqyb46-Stack-StyledInputWrapper:hover,
.cache-1nqyb46-Stack-StyledInputWrapper:focus {
  border-color: #792dd4;
  outline: none;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-dropdownvisible='true'] {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-2i7hx1-StyledText-StyledPlaceholder {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #727683;
  text-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-2i7hx1-StyledText-StyledPlaceholder[data-disabled='true'] {
  color: #b5b7bd;
}

.cache-wzr69d-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xcfd85-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xcfd85-StyledIcon-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.cache-tb6hp-StyledText-HelperText {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form
    novalidate=""
  >
    <div
      aria-label="test"
      class="cache-832x4l-SelectInputContainer ebdnz3x1"
    >
      <div
        aria-controls=":r6:"
        aria-describedby=":r6:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        data-container-full-width="true"
        tabindex="0"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            class="cache-wfyv8s-Stack ehpbis70"
          />
          <div
            aria-controls="select-dropdown"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="select bar"
            class="cache-1nqyb46-Stack-StyledInputWrapper ejy0aca2"
            data-disabled="false"
            data-dropdownvisible="false"
            data-readonly="false"
            data-size="large"
            data-state="neutral"
            data-testid="select-bar"
            tabindex="0"
          >
            <p
              class="ejy0aca0 cache-2i7hx1-StyledText-StyledPlaceholder e13y3mga0"
            >
              Select item
            </p>
            <div
              class="cache-wzr69d-Stack-StateStack ejy0aca3"
            >
              <svg
                class="cache-1xcfd85-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="ebdnz3x0 cache-tb6hp-StyledText-HelperText e13y3mga0"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectInputField should trigger events 1`] = `
<DocumentFragment>
  .cache-832x4l-SelectInputContainer {
  width: 100%;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-wfyv8s-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1nqyb46-Stack-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='small'] {
  height: 32px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='medium'] {
  height: 40px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-size='large'] {
  height: 48px;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='success'] {
  border: 1px solid #22674e;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-state='danger'] {
  border: 1px solid #b3144d;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.cache-1nqyb46-Stack-StyledInputWrapper:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-1nqyb46-Stack-StyledInputWrapper:hover,
.cache-1nqyb46-Stack-StyledInputWrapper:focus {
  border-color: #792dd4;
  outline: none;
}

.cache-1nqyb46-Stack-StyledInputWrapper[data-dropdownvisible='true'] {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-wzr69d-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-1xcfd85-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1xcfd85-StyledIcon-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.cache-tb6hp-StyledText-HelperText {
  color: #3f4250;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form
    novalidate=""
  >
    <div
      aria-label="test"
      class="cache-832x4l-SelectInputContainer ebdnz3x1"
    >
      <div
        aria-controls=":rv:"
        aria-describedby=":rv:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        data-container-full-width="true"
        tabindex="0"
      >
        <div
          class="cache-ymc80m-Stack ehpbis70"
        >
          <div
            class="cache-wfyv8s-Stack ehpbis70"
          />
          <div
            aria-controls="select-dropdown"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-labelledby="select bar"
            class="cache-1nqyb46-Stack-StyledInputWrapper ejy0aca2"
            data-disabled="false"
            data-dropdownvisible="false"
            data-readonly="false"
            data-size="large"
            data-state="neutral"
            data-testid="select-bar"
            tabindex="0"
          >
            <p
              class="cache-1e8qouo-StyledText e13y3mga0"
            >
              Mercury
            </p>
            <div
              class="cache-wzr69d-Stack-StateStack ejy0aca3"
            >
              <button
                aria-label="clear value"
                class="cache-1xcp86l-StyledGhostButton e112qvla0"
                data-testid="clear-all"
                type="button"
              >
                <svg
                  class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
              <svg
                class="cache-1xcfd85-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <p
        class="ebdnz3x0 cache-tb6hp-StyledText-HelperText e13y3mga0"
      />
    </div>
  </form>
</DocumentFragment>
`;
